SERVER-10202 added testing-only function getNextSleepMillis(). stabilized BasicTests::SleepBackoffTest under Windows 32-bit