src/mongo/dbtests/basictests.cpp
@@ -266,48 +266,23 @@ namespace BasicTests {
         void run() {
 
             int maxSleepTimeMillis = 1000;
-            int lastSleepTimeMillis = -1;
-            int epsMillis = 100; // Allowable inprecision for timing
 
             Backoff backoff( maxSleepTimeMillis, maxSleepTimeMillis * 2 );
 
-            Timer t;
+            // Double previous sleep duration
+            ASSERT_EQUALS( backoff.getNextSleepMillis( 0,   0, 0 ), 1 );
+            ASSERT_EQUALS( backoff.getNextSleepMillis( 2,   0, 0 ), 4 );
+            ASSERT_EQUALS( backoff.getNextSleepMillis( 256, 0, 0 ), 512 );
 
             // Make sure our backoff increases to the maximum value
-            int maxSleepCount = 0;
-            while( maxSleepCount < 3 ){
-
-                t.reset();
-
-                backoff.nextSleepMillis();
-
-                int elapsedMillis = t.millis();
-
-                mongo::unittest::log() << "Slept for " << elapsedMillis << endl;
-
-                ASSERT( almostGTE( elapsedMillis, lastSleepTimeMillis, epsMillis ) );
-                lastSleepTimeMillis = elapsedMillis;
-
-                if( almostEq( elapsedMillis, maxSleepTimeMillis, epsMillis ) ) maxSleepCount++;
-            }
+            ASSERT_EQUALS( backoff.getNextSleepMillis( maxSleepTimeMillis - 200, 0, 0 ), maxSleepTimeMillis );
+            ASSERT_EQUALS( backoff.getNextSleepMillis( maxSleepTimeMillis * 2, 0, 0 ), maxSleepTimeMillis );
 
             // Make sure that our backoff gets reset if we wait much longer than the maximum wait
-            sleepmillis( maxSleepTimeMillis * 4 );
+            unsigned long long resetAfterMillis = maxSleepTimeMillis + maxSleepTimeMillis * 2;
+            ASSERT_EQUALS( backoff.getNextSleepMillis( 20, resetAfterMillis, 0), 40 ); // no reset here
+            ASSERT_EQUALS( backoff.getNextSleepMillis( 20, resetAfterMillis + 1, 0), 1 ); // reset expected
 
-            t.reset();
-            backoff.nextSleepMillis();
-
-            ASSERT( almostEq( t.millis(), 0, epsMillis ) );
-
-        }
-
-        bool almostEq( int a, int b, int eps ){
-            return std::abs( a - b ) <= eps;
-        }
-
-        bool almostGTE( int a, int b, int eps ){
-            if( almostEq( a, b, eps ) ) return true;
-            return a > b;
         }
     };
 
